@@ -1,8 +1,8 @@
 package com.example.HealthCare.security;
 
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
@@ -11,10 +11,9 @@ import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
-import com.example.HealthCare.enums.Privilege;
-import com.example.HealthCare.model.Account;
-import com.example.HealthCare.model.User;
-import com.example.HealthCare.repository.AccountRepository;
+import com.example.HealthCare.enums.AccountStatus;
+import com.example.HealthCare.model.UserAccount;
+import com.example.HealthCare.repository.UserAccountRepository;
 
 import lombok.RequiredArgsConstructor;
 
@@ -22,35 +21,36 @@ import lombok.RequiredArgsConstructor;
 @RequiredArgsConstructor
 public class CustomUserDetailsService implements UserDetailsService {
 
-	private final AccountRepository accountRepository;
+	private final UserAccountRepository userAccountRepository;
 
 	@Override
-	public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
-		Account account = accountRepository.findByUsername(username)
-				.orElseThrow(() -> new UsernameNotFoundException("Account not found: " + username));
-		Collection<GrantedAuthority> authorities = buildAuthorities(account);
-		User domainUser = account.getUser();
-		boolean accountNonLocked = domainUser == null || !domainUser.isLocked();
-		boolean enabled = domainUser == null || !domainUser.isDeleted();
+	public UserDetails loadUserByUsername(String email) throws UsernameNotFoundException {
+		UserAccount userAccount = userAccountRepository.findByEmailAndIsDeletedFalse(email)
+				.orElseThrow(() -> new UsernameNotFoundException("User not found: " + email));
+		
+		// Check if account is active
+		boolean enabled = userAccount.getStatus() == AccountStatus.ACTIVE;
+		boolean accountNonLocked = !userAccount.getIsDeleted();
+		
+		Collection<GrantedAuthority> authorities = buildAuthorities(userAccount);
+		
 		return new org.springframework.security.core.userdetails.User(
-				account.getUsername(),
-				account.getPassword(),
+				userAccount.getEmail(),
+				userAccount.getPasswordHash() != null ? userAccount.getPasswordHash() : "",
 				enabled,
-				true,
-				true,
+				true, // accountNonExpired
+				true, // credentialsNonExpired
 				accountNonLocked,
 				authorities);
 	}
 
-	private Collection<GrantedAuthority> buildAuthorities(Account account) {
-		if (account.getRole() == null) {
-			return List.of();
+	private Collection<GrantedAuthority> buildAuthorities(UserAccount userAccount) {
+		if (userAccount.getRole() == null) {
+			return Collections.emptyList();
 		}
-		List<SimpleGrantedAuthority> roleAuthority = List.of(new SimpleGrantedAuthority("ROLE_" + account.getRole().getName().name()));
-		List<SimpleGrantedAuthority> privilegeAuthorities = account.getRole().getPrivileges() == null ? List.of() : account.getRole().getPrivileges().stream()
-				.map(Privilege::name)
-				.map(SimpleGrantedAuthority::new)
-				.collect(Collectors.toList());
-		return List.copyOf(new java.util.ArrayList<>(java.util.stream.Stream.concat(roleAuthority.stream(), privilegeAuthorities.stream()).toList()));
+		
+		// Create role authority from UserRole enum
+		String roleName = "ROLE_" + userAccount.getRole().name();
+		return Collections.singletonList(new SimpleGrantedAuthority(roleName));
 	}
 }
